2011-11-16  Hub Figuière  <hub@figuiere.net>

	Fix namespacing for Cairo (Closes: #663303)

	* gdk/src/window.hg: Cairo need to be referred into the global
	namespace

2011-07-08  Murray Cumming  <murrayc@murrayc.com>

	Increase mm-common version requirement.

	* configure.ac: Require the version that actually allows avoiding 
	the dependency in the tarball.

2.24.2:

2011-07-08  Murray Cumming  <murrayc@murrayc.com>

	Do not require mm-common for tarball builds.

	* configure.ac: Use MM_CONFIG_DOCTOOL_DIR() as in gtkmm 3 already, 
	and in other *mm projects.
	Bug #654231 (Pacho Ramos)

2.24.1:

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Ctors call set_entry_text_column() when has_entry is true.

	* gtk/gtkmm/comboboxtext.cc: Constructors call set_entry_text_column()
	instead of pack_start(), when has_entry is true. Bug #650673.

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: prepend_text() calls prepend().

	* gtk/gtkmm/comboboxtext.cc: prepend_text() calls prepend() instead of
	append(). Bug #650673.

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Fix deprecation comment and inconsistent ifdefs.

	* gtk/gtkmm/comboboxtext.h: Change comment for deprecated clear(): Use
	remove_all() instead of equally deprecated clear_items().
	* gtk/gtkmm/comboboxtext.cc: clear_items() is guarded by
	GTKMM_DISABLE_DEPRECATED, as in comboboxtext.h. Bug #650673.

2011-06-14  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ComboBoxText: Fix a typo.

	* gtk/gtkmm/comboboxtext.cc: Replace has_model by has_entry. Bug #650673.

2011-02-22  Murray Cumming  <murrayc@murrayc-desktop>

	Gdk::Rectangle: Added reference documentation.

	* gdk/src/rectangle.hg: Add doxygen comments based on the documentation of 
	the C API.
	
2.24.0:

2011-02-08  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText, ComboBoxEntryText: Add warning about not confusing these.

	* gtk/gtkmm/comboboxentrytext.h: