@@ -20,6 +20,9 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
+#include <glibmm/value.h>
+#include <glibmm/arrayhandle.h>
+#include <glibmm/listhandle.h>
 #include <gtkmm/accelkey.h>
 #include <gtkmm/accelgroup.h>
 
