@@ -1,3 +1,11 @@
+2013-04-04  Hub Figuière  <hub@figuiere.net>
+
+	* gtk/src/treemodel.hg:
+	* gtk/gtkmm/accelkey.cc:
+	* gtk/gtkmm/accelmap.cc:
+	* gtk/gtkmm/selectiondata_private.cc:
+	* gdk/gdkmm/rgb.cc: Add missing include.
+
 2011-11-16  Hub Figuière  <hub@figuiere.net>
 
 	Fix namespacing for Cairo (Closes: #663303)
